# pipelines

./: Dockerfile  README.md  TODO.md  dagster_test.py  prefect_test.py  pyproject.toml  setup.py
example_pipeline/: pipeline.py
original/: original.csv
pipelines/: __init__.py  cli.py  core.py  funcs.py  load.py  tasks.py  utils.py
