[tool.poetry]
name = "pipelines"
version = "0.1.1"
description = ""
authors = ["Leonid Shvechikov <shvechikov@gmail.com>", "Kozyrev Yuri <uyraq2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
